impl/tests/errors/__snapshots__/test_array_index_out_of_range.ambr
# serializer version: 1
# name: test_array_index_out_of_range_output
  '''
  
  [31m[E13] Error:[0m Indexing is out of range, maximum range is [38;5;201m2[0m but used value [38;5;155m3[0m
     [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mstdin:2:7[38;5;246m][0m
     [38;5;246m│[0m
   [38;5;246m2 │[0m [38;5;249mp[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m([0m[38;5;187mx[0m[38;5;187m[[0m[38;5;187m3[0m[38;5;187m][0m[38;5;249m)[0m
   [38;5;240m  │[0m       [38;5;187m─[0m[38;5;187m─[0m[38;5;187m┬[0m[38;5;187m─[0m  
   [38;5;240m  │[0m         [38;5;187m╰[0m[38;5;187m─[0m[38;5;187m─[0m[38;5;187m─[0m is out of range 
  [38;5;246m───╯[0m
  
  
  '''
# ---
